hw/module8_作业/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpserver
spec:
  selector:
    matchLabels:
      app: httpserver
  replicas: 1
  template:
    metadata:
      labels:
        app: httpserver
    spec:
      containers:
        - name: httpserver
          image: zsingsun/httpserver:v1.1
          resources:
            limits:
              memory: 1Gi
              cpu: 1
            requests:
              memory: 256Mi
          volumeMounts:
            - name: config-volume
              mountPath: /app/conf
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 5
            successThreshold: 2
          lifecycle:
            preStop:
              exec:
                command: ["/bin/bash", "-c", "echo Hello from the preStop handler"]
      volumes:
        - name: config-volume
          configMap:
            name: httpserver-config
