hw/module8_作业/pod_httpserver.yaml
apiVersion: v1
kind: Pod
metadata:
  name: httpserver
spec:
  containers:
    - name: httpserver
      image: zsingsun/httpserver:v1.0
      readinessProbe:
        httpGet:
          path: /healthz
          port: 8000
        initialDelaySeconds: 30
        periodSeconds: 5
        successThreshold: 2
      lifecycle:
        preStop:
          exec:
            command: ["/bin/bash", "-c", "echo Hello from the preStop handler"]
