hw/module8_作业/2.service_with_topology.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    app: httpserver
  topologyKeys:
    - "topology.kubernetes.io/zone"
    - "*"
