hw/module8_作业/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver-basic
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      name: http
      targetport: 8000
  selector:
    app: http
