hw/module8_作业/service_with_topology.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpserver
  annotations:
    service.kubernetes.io/topology-aware-hints: auto
spec:
  type: ClusterIP
  ports:
    - port: 80
      protocol: TCP
      targetPort: 8081
  selector:
    app: httpserver
