hw/module8_作业/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: httpserver
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: cncamp.example.io
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: httpserver
                port:
                  number: 80
